--- a/package.json
+++ b/package.json
@@ -1,43 +1,44 @@
 {
-  "name": "typescript-action",
-  "version": "0.0.0",
-  "private": true,
-  "description": "TypeScript template action",
+  "name": "pulumi-helm-updater",
+  "version": "0.1.0",
+  "description": "Check for updates in pulumi managed helm",
   "main": "lib/main.js",
   "scripts": {
     "build": "tsc",
-    "format": "prettier --write '**/*.ts'",
-    "format-check": "prettier --check '**/*.ts'",
-    "lint": "eslint src/**/*.ts",
+    "lint": "eslint --ext ts .",
+    "lint:fix": "eslint --fix --ext ts src/",
     "package": "ncc build --source-map --license licenses.txt",
-    "test": "jest",
-    "all": "npm run build && npm run format && npm run lint && npm run package && npm test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/actions/typescript-action.git"
+    "url": "git+https://github.com/LambArchie/pulumi-helm-updater.git"
   },
   "keywords": [
     "actions",
-    "node",
-    "setup"
+    "helm",
+    "pulumi",
+    "updater"
   ],
-  "author": "",
-  "license": "MIT",
+  "author": "LambArchie",
+  "license": "ISC",
   "dependencies": {
-    "@actions/core": "^1.6.0"
+    "@actions/core": "1.10.0"
   },
   "devDependencies": {
-    "@types/node": "^16.10.5",
-    "@typescript-eslint/parser": "^5.8.1",
-    "@vercel/ncc": "^0.31.1",
-    "eslint": "^7.32.0",
-    "eslint-plugin-github": "^4.3.2",
-    "eslint-plugin-jest": "^25.3.2",
-    "jest": "^27.2.5",
-    "js-yaml": "^4.1.0",
-    "prettier": "2.5.1",
-    "ts-jest": "^27.1.2",
-    "typescript": "^4.4.4"
+    "@tsconfig/node16": "^1.0.3",
+    "@types/jest": "^29.1.1",
+    "@types/node": "16.11.7",
+    "@typescript-eslint/eslint-plugin": "^5.38.1",
+    "@typescript-eslint/parser": "5.38.1",
+    "@vercel/ncc": "0.34.0",
+    "eslint": "8.24.0",
+    "eslint-config-airbnb-base": "15.0.0",
+    "eslint-config-airbnb-typescript": "^17.0.0",
+    "eslint-plugin-import": "2.26.0",
+    "eslint-plugin-jest": "27.0.4",
+    "js-yaml": "4.1.0",
+    "ts-jest": "29.0.3",
+    "typescript": "4.8.4"
   }
 }
