--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,7 @@
     "module": "es2020",
     "outDir": "./lib",
     "rootDir": "./src",
-    "esModuleInterop": true, // Maybe
+    "esModuleInterop": true,
     "experimentalDecorators": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
