--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -8,8 +8,7 @@
   ],
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
-    "ecmaVersion": 2021,
-    "project": "./tsconfig.json"
+    "ecmaVersion": 2021
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
@@ -26,6 +25,9 @@
       "ExportDeclaration": { "consistent": true, "multiline": true }
     }],
     "@typescript-eslint/semi": ["error", "never"]
+  },
+  "settings": {
+    "import/resolver": { "node": { "extensions": [".ts"]}}
   },
   "overrides": [
     {
