--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,6 @@
 {
   "extends": "@tsconfig/node16/tsconfig.json",
   "compilerOptions": {
-    "module": "es2020",
     "outDir": "./lib",
     "rootDir": "./src",
     "esModuleInterop": true,
@@ -9,5 +8,5 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
   },
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "**/*.test.ts"]
 }
