--- a/package.json
+++ b/package.json
@@ -7,12 +7,19 @@
     "build": "tsc",
     "lint": "eslint --ext ts .",
     "lint:fix": "eslint --fix --ext ts src/",
-    "package": "ncc build --source-map --license licenses.txt",
+    "package": "ncc build --target es2021",
+    "package:build": "npm run build && npm run package",
     "test": "jest"
   },
+  "author": "LambArchie",
+  "license": "MIT",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/LambArchie/pulumi-helm-updater.git"
+  },
+  "homepage": "https://github.com/LambArchie/pulumi-helm-updater",
+  "bugs": {
+    "url": "https://github.com/LambArchie/pulumi-helm-updater/issues"
   },
   "keywords": [
     "actions",
@@ -20,15 +27,18 @@
     "pulumi",
     "updater"
   ],
-  "author": "LambArchie",
-  "license": "ISC",
   "dependencies": {
-    "@actions/core": "1.10.0"
+    "@actions/core": "1.10.0",
+    "axios": "0.27.2",
+    "js-yaml": "4.1.0",
+    "semver": "7.3.7"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
     "@types/jest": "^29.1.1",
+    "@types/js-yaml": "4.0.5",
     "@types/node": "16.11.7",
+    "@types/semver": "7.3.12",
     "@typescript-eslint/eslint-plugin": "^5.38.1",
     "@typescript-eslint/parser": "5.38.1",
     "@vercel/ncc": "0.34.0",
@@ -37,7 +47,6 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "2.26.0",
     "eslint-plugin-jest": "27.0.4",
-    "js-yaml": "4.1.0",
     "ts-jest": "29.0.3",
     "typescript": "4.8.4"
   }
