--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,5 @@
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
   },
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "exclude": ["node_modules", "**/*.test.ts", "example"]
 }
