--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -9,7 +9,7 @@
   "parser": "@typescript-eslint/parser",
   "parserOptions": {
     "ecmaVersion": 2021,
-    "project": ["./tsconfig.json", "example/tsconfig.json"]
+    "project": ["./tsconfig.json", "./tsconfig-test.json", "example/tsconfig.json"]
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
