Fix node 14 CI failure

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,6 +25,12 @@ jobs:
           node-version: ${{ matrix.node }}
           cache: 'npm'
 
+      - name: Upgrade npm
+        if: matrix.node == '14'
+        shell: bash
+        run: |-
+          npm install -g npm@latest
+
       - name: Install Dependencies
         shell: bash
         run: |-
