--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -49,7 +49,10 @@ jobs:
       - name: Test
         shell: bash
         run: |-
+          stopMarker=$(uuidgen)
+          echo "::stop-commands::$stopMarker"
           npm run test
+          echo "::$stopMarker::"
 
   test:
     runs-on: ubuntu-latest
