--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -56,18 +56,26 @@ jobs:
 
   test:
     runs-on: ubuntu-latest
+    env:
+      PULUMI_CONFIG_PASSPHRASE: ''
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - name: Set pulumi options
+      - name: Setup Node 16
+        uses: actions/setup-node@v3
+        with:
+          node-version: 16
+          cache: 'npm'
+          cache-dependency-path: example/package-lock.json
+
+      - name: Create test files
         working-directory: example
         shell: bash
         run: |-
-          echo "PULUMI_CONFIG_PASSPHRASE=" >> $GITHUB_ENV
-          export PULUMI_CONFIG_PASSPHRASE=""
           pulumi stack export --stack dev > export.json
-          pulumi preview --show-sames -j > preview.json
+          npm ci
+          pulumi preview --stack dev --show-sames --json > preview.json
 
       - name: Check file was not accidently updated
         shell: bash
@@ -91,7 +99,7 @@ jobs:
       - name: Run with stack file (export)
         uses: ./
         with:
-          stack_file: export.json
+          stack_file: example/export.json
           write_format: js
           write_location: example/helmVersions.ts
 
@@ -104,7 +112,7 @@ jobs:
       - name: Run with stack file (preview)
         uses: ./
         with:
-          stack_file: preview.json
+          stack_file: example/preview.json
           stack_file_format: preview
           write_format: js
           write_location: example/helmVersions.ts
